# web3-hd-signer

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  shell.nix  tree.output
nix/: pkgs.nix
res/: trc20.abi.json
src/: balance.rs  error.rs  fee.rs  functions.rs  lib.rs  main.rs  mod.rs  rates.rs  tron.rs  types.rs  wallet.rs
src/tron/: abi.rs  calls.rs  mod.rs  private.rs  signature.rs
src/tron_grpc/: protocol.rs
