[package]
name = "web3-hd-signer"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08 <nazgull08@gmail.com>"]
description = "signing functions for web3_hd library"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3-hd-signer"
keywords = ["web3","wallet","hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.30.0"
eth_checksum = "0.1.2"
hex = "0.4.3"
secp256k1 = "0.27.0"
serde = { version = "1.0.163", features = ["derive"] }
sha256 = "1.1.3"
sha3 = "0.9.1"
tiny-bip39 = "0.8.0"
web3 = "0.19.0"
tokio = "1.29.1"
log = "^0.4.19"
