[package]
name = "web3-hd-signer"
version = "0.1.0"
edition = "2021"
authors = ["Nazgull08 <nazgull08@gmail.com>"]
description = "signing functions for web3_hd library"
license = "Apache-2.0"
repository = "https://github.com/nazgull08/web3-hd-signer"
keywords = ["web3","wallet","hd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "web3_hd_signer"
path = "src/lib.rs"

[[bin]]
name = "web3_hd_signer"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.57"
bdk = "0.28.2"
bitcoin = "0.30.0"
clap = { version = "^4.0", features = ["derive"] }
config = "^0.13.3"
eth_checksum = "0.1.2"
hex = "0.4.3"
log = "^0.4.19"
reqwest = "^0.11.18"
rustc-hex = "^2.1.0"
secp256k1 = "0.27.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.8"
sha2 = "0.9"
sha256 = "1.1.3"
sha3 = "0.9.1"
stellar_sdk = { git = "https://github.com/nazgull08/stellar-sdk-adv.git" } 
thiserror = "1.0.47"
tiny-bip39 = "0.8.0"
tokio = "1.29.1"
web3 = "0.19.0"
protobuf = "3.2.0"
